--- a/dre.html
+++ b/dre.html
@@ -16,6 +16,26 @@
             padding: 0;
             font-size: 20px;
             display: flex;
+            flex-direction: column;
+        }
+
+        /* Top Navigation Bar */
+        .top-nav {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            background: linear-gradient(90deg, #fb4f14, #000000);
+            padding: 15px 25px;
+            position: fixed;
+            width: 100%;
+            top: 0;
+            z-index: 1000;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        .top-nav .logo img {
+            width: 50px;
+            height: auto;
         }
 
         /* Sidebar Navigation */
@@ -25,7 +45,7 @@
             background: linear-gradient(180deg, #fb4f14, #000000);
             display: flex;
             flex-direction: column;
-            padding-top: 15px;
+            padding-top: 70px;
             font-size: 20px;
             position: fixed;
             top: 0;
@@ -54,6 +74,7 @@
         main {
             margin-left: 260px;
             padding: 25px;
+            padding-top: 100px;
             width: calc(100% - 260px);
             box-sizing: border-box;
             display: flex;
@@ -87,6 +108,11 @@
     </style>
 </head>
 <body>
+    <!-- Top Navigation -->
+    <header class="top-nav">
+        <div class="logo"><img src="Thumbnails/Wlogo3.png" alt="Logo"></div>
+    </header>
+
     <!-- Sidebar Navigation -->
     <aside class="sidebar">
         <a href="dre.html"><b>HOME</b></a>
