--- a/dre.html
+++ b/dre.html
@@ -82,28 +82,36 @@
             gap: 20px;
         }
 
-        .dashboard, .task-manager, .news-feed {
+        .dashboard, .task-manager, .news-feed, .code-editor {
             background: #ffffff;
             padding: 18px;
             border-radius: 5px;
             box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
         }
 
-        .news-feed ul {
-            list-style: none;
-            padding: 0;
+        textarea {
+            width: 100%;
+            height: 100px;
+            background: #ffffff;
+            color: #222;
+            border: 1px solid #ddd;
+            padding: 12px;
+            margin-bottom: 12px;
+            font-size: 18px;
         }
 
-        .news-feed li {
-            margin: 10px 0;
-            padding: 10px;
-            border-bottom: 1px solid #ddd;
-        }
-
-        .news-feed a {
-            text-decoration: none;
-            color: #fb4f14;
+        button {
+            background-color: #ffcc00;
+            color: black;
+            border: none;
+            padding: 12px 18px;
+            cursor: pointer;
+            font-size: 20px;
             font-weight: bold;
+        }
+
+        button:hover {
+            background-color: #e0b700;
         }
     </style>
 </head>
@@ -120,15 +128,10 @@
         <a href="https://www.youtube.com/" target="_blank">YouTube</a>
         <a href="https://www.w3schools.com/" target="_blank">W3Schools</a>
         <a href="https://github.com/writeItInCursive/Andre-website" target="_blank">GitHub</a>
-        <a href="https://www.office.com/" target="_blank">Office 365</a>
-        <a href="https://www.amazon.com/" target="_blank">Amazon</a>
-        <a href="https://www.wikipedia.org/" target="_blank">Wikipedia</a>
-        <a href="https://open.spotify.com/" target="_blank">Spotify</a>
     </aside>
 
     <!-- Main Content -->
     <main>
-        <!-- Welcome Section -->
         <section class="dashboard">
             <h2>🌟 Welcome to Your Dashboard 🚀</h2>
             <p>Access your favorite tools, test code, and explore new ideas.</p>
@@ -147,42 +150,28 @@
             <h3>📰 Latest News</h3>
             <ul id="newsList">Loading news...</ul>
         </section>
+
+        <!-- Code Editors -->
+        <section class="code-editor">
+            <h3>Live Code Editor</h3>
+            <textarea id="htmlCode" placeholder="Write HTML here..."></textarea>
+            <textarea id="cssCode" placeholder="Write CSS here..."></textarea>
+            <textarea id="jsCode" placeholder="Write JavaScript here..."></textarea>
+            <button onclick="runCode()">Run Code</button>
+            <iframe id="output"></iframe>
+        </section>
     </main>
 
     <script>
-        // Fetch News
-        async function fetchNews() {
-            const newsList = document.getElementById("newsList");
-            newsList.innerHTML = "Loading news...";
-            try {
-                let response = await fetch("https://newsapi.org/v2/top-headlines?country=us&apiKey=YOUR_NEWS_API_KEY");
-                let data = await response.json();
-                newsList.innerHTML = "";
-                data.articles.slice(0, 5).forEach(article => {
-                    let li = document.createElement("li");
-                    li.innerHTML = `<a href="${article.url}" target="_blank">${article.title}</a>`;
-                    newsList.appendChild(li);
-                });
-            } catch (error) {
-                newsList.innerHTML = "Failed to load news.";
-            }
-        }
-        fetchNews();
-
-        // Task Manager
-        function addTask() {
-            let taskInput = document.getElementById("taskInput");
-            let taskList = document.getElementById("taskList");
-            if (taskInput.value.trim() === "") return;
+        function runCode() {
+            let htmlCode = document.getElementById("htmlCode").value;
+            let cssCode = "<style>" + document.getElementById("cssCode").value + "</style>";
+            let jsCode = "<script>" + document.getElementById("jsCode").value + "<\/script>";
             
-            let li = document.createElement("li");
-            li.innerHTML = `${taskInput.value} <button class="remove-task" onclick="removeTask(this)">❌</button>`;
-            taskList.appendChild(li);
-            taskInput.value = "";
-        }
-
-        function removeTask(button) {
-            button.parentElement.remove();
+            let output = document.getElementById("output").contentWindow.document;
+            output.open();
+            output.write(htmlCode + cssCode + jsCode);
+            output.close();
         }
     </script>
 </body>
