--- a/dre.html
+++ b/dre.html
@@ -161,6 +161,29 @@
             <iframe id="output"></iframe>
         </section>
     </main>
+<script>
+    async function fetchNews() {
+        const newsList = document.getElementById("newsList");
+        newsList.innerHTML = "Loading news...";
+
+        try {
+            let response = await fetch("https://newsapi.org/v2/top-headlines?country=us&apiKey=8d79c0e6f806452790e90d83489a8294");
+            let data = await response.json();
+
+            newsList.innerHTML = "";
+            data.articles.slice(0, 5).forEach(article => {
+                let li = document.createElement("li");
+                li.innerHTML = `<a href="${article.url}" target="_blank">${article.title}</a>`;
+                newsList.appendChild(li);
+            });
+        } catch (error) {
+            newsList.innerHTML = "❌ Failed to load news.";
+        }
+    }
+
+    // Load news on page load
+    fetchNews();
+</script>
 
     <script>
         function runCode() {
