--- a/dre.html
+++ b/dre.html
@@ -8,9 +8,8 @@
         /* General Styles */
         body {
             font-family: Arial, sans-serif;
-            background-image: url('https://source.unsplash.com/1600x900/?abstract,modern');
+            background: url('https://source.unsplash.com/1600x900/?technology,abstract') no-repeat center center fixed;
             background-size: cover;
-            background-position: center;
             color: #222;
             margin: 0;
             padding: 0;
@@ -82,37 +81,19 @@
             gap: 20px;
         }
 
-        .dashboard, .task-manager, .news-feed, .code-editor {
+        .dashboard, .task-manager, .news-feed, .code-editor, .quote-box {
             background: #ffffff;
             padding: 18px;
             border-radius: 5px;
             box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
         }
 
-        textarea {
-            width: 100%;
-            height: 100px;
-            background: #ffffff;
-            color: #222;
-            border: 1px solid #ddd;
-            padding: 12px;
-            margin-bottom: 12px;
-            font-size: 18px;
+        .quote-box {
+            font-style: italic;
+            font-size: 22px;
+            text-align: center;
         }
 
-        button {
-            background-color: #ffcc00;
-            color: black;
-            border: none;
-            padding: 12px 18px;
-            cursor: pointer;
-            font-size: 20px;
-            font-weight: bold;
-        }
-
-        button:hover {
-            background-color: #e0b700;
-        }
     </style>
 </head>
 <body>
@@ -132,6 +113,8 @@
 
     <!-- Main Content -->
     <main>
+        <section class="quote-box" id="quoteBox">Loading quote...</section>
+        
         <section class="dashboard">
             <h2>🌟 Welcome to Your Dashboard 🚀</h2>
             <p>Access your favorite tools, test code, and explore new ideas.</p>
@@ -150,52 +133,21 @@
             <h3>📰 Latest News</h3>
             <ul id="newsList">Loading news...</ul>
         </section>
-
-        <!-- Code Editors -->
-        <section class="code-editor">
-            <h3>Live Code Editor</h3>
-            <textarea id="htmlCode" placeholder="Write HTML here..."></textarea>
-            <textarea id="cssCode" placeholder="Write CSS here..."></textarea>
-            <textarea id="jsCode" placeholder="Write JavaScript here..."></textarea>
-            <button onclick="runCode()">Run Code</button>
-            <iframe id="output"></iframe>
-        </section>
     </main>
-<script>
-    async function fetchNews() {
-        const newsList = document.getElementById("newsList");
-        newsList.innerHTML = "Loading news...";
-
-        try {
-            let response = await fetch("https://newsapi.org/v2/top-headlines?country=us&apiKey=8d79c0e6f806452790e90d83489a8294");
-            let data = await response.json();
-
-            newsList.innerHTML = "";
-            data.articles.slice(0, 5).forEach(article => {
-                let li = document.createElement("li");
-                li.innerHTML = `<a href="${article.url}" target="_blank">${article.title}</a>`;
-                newsList.appendChild(li);
-            });
-        } catch (error) {
-            newsList.innerHTML = "❌ Failed to load news.";
-        }
-    }
-
-    // Load news on page load
-    fetchNews();
-</script>
 
     <script>
-        function runCode() {
-            let htmlCode = document.getElementById("htmlCode").value;
-            let cssCode = "<style>" + document.getElementById("cssCode").value + "</style>";
-            let jsCode = "<script>" + document.getElementById("jsCode").value + "<\/script>";
-            
-            let output = document.getElementById("output").contentWindow.document;
-            output.open();
-            output.write(htmlCode + cssCode + jsCode);
-            output.close();
+        // Fetch Quote of the Day
+        async function fetchQuote() {
+            const quoteBox = document.getElementById("quoteBox");
+            try {
+                let response = await fetch("https://api.quotable.io/random");
+                let data = await response.json();
+                quoteBox.textContent = `"${data.content}" - ${data.author}`;
+            } catch (error) {
+                quoteBox.textContent = "❌ Failed to load quote.";
+            }
         }
+        fetchQuote();
     </script>
 </body>
 </html>
